# AFlow

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.py  run_baseline.py
.github/workflows/: pre-commit.yml  pytest.yml
benchmarks/: README.md  amc.py  arc.py  bbh.py  benchmark.py  drop.py  gpqa.py  gsm8k.py  hotpotqa.py  humaneval.py  liar.py  livecodebench.py  math.py  mbpp.py  strategyqa.py  wsc.py
config/: config2.example.yaml
data/: download_data.py
data/datasets/: arc_test.jsonl  arc_validate.jsonl  strategyqa_test.jsonl  strategyqa_validate.jsonl
log_viz/: app.py  data_loader.py  plots.py
log_viz/components/: __init__.py  mcts_tree.py  metrics_cards.py  predictions_table.py  prompt_viewer.py  sidebar.py  workflow_diagram.py  workflow_viewer.py
log_viz/pages/: compare_val_test.py
log_viz/utils/: __init__.py  config.py
scripts/: async_llm.py  evaluator.py  formatter.py  interface.py  logs.py  operator_an.py  operators.py  optimizer.py  workflow.py
scripts/optimizer_utils/: convergence_utils.py  data_utils.py  evaluation_utils.py  experience_utils.py  graph_utils.py  run_config.py
scripts/prompts/: optimize_prompt.py  prompt.py
scripts/utils/: code.py  common.py  lcb_runner.py  sanitize.py
tests/: test_smoke.py
workspace/ARC/workflows_test/: results.json
workspace/HotpotQA/workflows/: processed_experience.json  results.json
workspace/HotpotQA/workflows_test/: results.json
workspace/StrategyQA/workflows_test/: results.json
workspace_pilot2/HotpotQA/workflows/: results.json  run_config.json
(+37 files in other folders)
