[project]
name = "aflow"
version = "0.1.0"
description = "AFlow: Automating Agentic Workflow Generation"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "mpmath==1.3.0",
    "numpy>=2.4",
    "openai==1.82.0",
    "pandas==2.2.3",
    "pyaml==25.1.0",
    "pydantic==2.11.5",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests>=2.32.5",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "tree-sitter>=0.24",
]

# JFrog only — pypi.org is blocked by IT. This index is the sole default.
[[tool.uv.index]]
name = "jfrog"
url = "https://fsaiartifact.jfrog.io/artifactory/api/pypi/fsai-private-py-AUS-virtual/simple"
default = true
